GatewayApi/k8sFiles/WebApp/WebApp_loadbalancer_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp-loadbalancer-service
spec:
  selector:
    app: webapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 50080
      targetPort: 80
      nodePort: 30000
# kubectl apply -f WebApp_loadbalancer_service.yaml
# to assign external IP
# minikube service mywebapp-loadbalancer-service
