GatewayApi/k8sFiles/WebApp/WebApp_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywenapp-service
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 50080
# kubectl apply -f WebApp_service.yaml
